k8s/jenkins/manifests/0400-ingress-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: jenkins-gateway
  namespace: jenkins
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - jenkins.192.168.49.2.sslip.io
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  hosts:
    - jenkins.192.168.49.2.sslip.io
  gateways:
    - jenkins/jenkins-gateway
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: jenkins
          port:
            number: 8080
